# server/app/Api/Controllers/PostController.php
@@ -30,7 +30,11 @@ class PostController extends ApiController
      *     ),
      *     @OA\Response(
      *         response=200,
-     *         description="successful operation"
+     *         description="successful operation",
+     *         @OA\JsonContent(
+     *             type="array",
+     *             @OA\Items(ref="#/components/schemas/PostCollection")
+     *         )
      *     )
      * )
      *
@@ -61,7 +65,8 @@ class PostController extends ApiController
      *     @OA\Parameter(ref="#/components/parameters/slug"),
      *     @OA\Response(
      *         response=200,
-     *         description="successful operation"
+     *         description="successful operation",
+     *         @OA\JsonContent(ref="#/components/schemas/Post"),
      *     )
      * )
      *
