# server/app/Transformers/PageTransformer.php
@@ -2,10 +2,26 @@
 
 namespace App\Transformers;
 
+use League\Fractal;
 use App\Models\Post;
 
-class PageTransformer extends PageCollectionTransformer
+/**
+ * @OA\Schema(schema="Page")
+ */
+class PageTransformer extends Fractal\TransformerAbstract
 {
+    /**
+     * @OA\Property(property="title", type="string")
+     * @OA\Property(property="summary", type="string")
+     * @OA\Property(property="body", type="string")
+     * @OA\Property(property="featured_image", type="string", format="uri")
+     * @OA\Property(property="slug", type="string")
+     * @OA\Property(property="url", type="string")
+     *
+     * @param Post $post
+     *
+     * @return array
+     */
     public function transform(Post $post)
     {
         $url = request()->getSchemeAndHttpHost();
@@ -15,7 +31,6 @@ class PageTransformer extends PageCollectionTransformer
             'summary'          => $post->summary,
             'body'             => str_replace('src="/', "src=\"{$url}/", $post->body),
             'featured_image'   => $post->featured_image,
-            'publication_date' => $post->publication_date,
             'slug'             => $post->slug,
             'url'              => $post->url,
             'links'            => [
