# server/app/Transformers/PostTransformer.php
@@ -2,10 +2,36 @@
 
 namespace App\Transformers;
 
+use League\Fractal;
 use App\Models\Post;
 
-class PostTransformer extends PostCollectionTransformer
+/**
+ * @OA\Schema(schema="Post")
+ */
+class PostTransformer extends Fractal\TransformerAbstract
 {
+    protected $defaultIncludes = [
+        'tags',
+    ];
+
+    /**
+     * @OA\Property(property="title", type="string")
+     * @OA\Property(property="summary", type="string")
+     * @OA\Property(property="body", type="string")
+     * @OA\Property(property="featured_image", type="string", format="uri")
+     * @OA\Property(property="publication_date", type="string", format="date-time")
+     * @OA\Property(property="slug", type="string")
+     * @OA\Property(property="url", type="string")
+     * @OA\Property(
+     *     property="tags",
+     *     type="array",
+     *     @OA\Items(ref="#/components/schemas/Tag")
+     * )
+     *
+     * @param Post $post
+     *
+     * @return array
+     */
     public function transform(Post $post)
     {
         $url = request()->getSchemeAndHttpHost();
@@ -22,5 +48,17 @@ class PostTransformer extends PostCollectionTransformer
                 'self' => route('api.cms.posts.show', $post->slug),
             ],
         ];
+    }
+
+    /**
+     * Include Tags.
+     *
+     * @param \App\Models\Post $post
+     *
+     * @return \League\Fractal\Resource\Collection
+     */
+    public function includeTags(Post $post)
+    {
+        return $this->collection($post->tagsWithType(), new TagTransformer());
     }
 }
